--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -147,7 +147,9 @@
         "vscode:prepublish": "npm run build",
         "build": "tsc",
         "dev": "tsc --watch",
-        "test": "node ./out/test/runTest.js",
+        "test": "jest",
+        "test:coverage": "jest --coverage",
+        "test:integration": "npm run build && node ./dist/test/runTest.js",
         "package": "vsce package",
         "clean": "rimraf dist out"
     },
@@ -157,7 +159,10 @@
     "devDependencies": {
         "@types/vscode": "^1.85.0",
         "@types/node": "^18.0.0",
+        "@types/jest": "^29.5.0",
         "@vscode/test-electron": "^2.3.0",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.1.0",
         "typescript": "^5.3.0",
         "@vscode/vsce": "^2.22.0",
         "rimraf": "^5.0.0"
