feat: add coverage script to package.json for Jest tests

--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -10,6 +10,7 @@
         "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
         "start": "node dist/server.js",
         "test": "jest",
+        "test:coverage": "jest --coverage",
         "test:watch": "jest --watch",
         "clean": "rimraf dist"
     },
