--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -4,7 +4,7 @@
     "description": "Query Business Central telemetry from VSCode using natural language with GitHub Copilot",
     "version": "0.1.0",
     "publisher": "waldo",
-    "icon": "resources/icon.png",
+    "icon": "images/waldo.png",
     "engines": {
         "vscode": "^1.85.0"
     },
@@ -24,6 +24,10 @@
         "onStartupFinished"
     ],
     "main": "./dist/extension.js",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/waldo1001/waldo.BCTelemetryBuddy.git"
+    },
     "contributes": {
         "commands": [
             {
@@ -150,7 +154,7 @@
         "test": "jest",
         "test:coverage": "jest --coverage",
         "test:integration": "npm run build && node ./dist/test/runTest.js",
-        "package": "vsce package",
+        "package": "npm install --production --no-save && vsce package",
         "clean": "rimraf dist out"
     },
     "dependencies": {
