fixes; enhance .vscodeignore to prevent parent directory inclusion

--- a/packages/extension/.vscodeignore
+++ b/packages/extension/.vscodeignore
@@ -1,3 +1,7 @@
+# Parent directories (critical - prevent including workspace root)
+../
+../../
+
 # Source files (only include compiled dist/)
 src/
 tsconfig.json
