--- a/packages/extension/tsconfig.json
+++ b/packages/extension/tsconfig.json
@@ -2,6 +2,7 @@
     "extends": "../../tsconfig.json",
     "compilerOptions": {
         "module": "CommonJS",
+        "moduleResolution": "node10",
         "outDir": "./dist",
         "rootDir": "./src",
         "lib": [
