--- a/packages/mcp/tsconfig.json
+++ b/packages/mcp/tsconfig.json
@@ -1,6 +1,8 @@
 {
     "extends": "../../tsconfig.json",
     "compilerOptions": {
+        "module": "ES2022",
+        "moduleResolution": "bundler",
         "outDir": "./dist",
         "rootDir": "./src"
     },
