Feature: Implemented cache management commands for user control over cache lifecycle

--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -62,6 +62,18 @@
             {
                 "command": "bctb.openQueriesFolder",
                 "title": "BC Telemetry Buddy: Open Queries Folder"
+            },
+            {
+                "command": "bctb.clearCache",
+                "title": "BC Telemetry Buddy: Clear Cache"
+            },
+            {
+                "command": "bctb.cleanupCache",
+                "title": "BC Telemetry Buddy: Cleanup Expired Cache"
+            },
+            {
+                "command": "bctb.showCacheStats",
+                "title": "BC Telemetry Buddy: Show Cache Statistics"
             }
         ],
         "mcpServerDefinitionProviders": [
