Refactor release and publish workflows to enhance clarity and streamline processes; remove deprecated publish.yml and update commands for VS Code Marketplace and Open VSX Registry.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -140,18 +140,18 @@ jobs:
           path: ./artifacts
       
       - name: Publish to VS Code Marketplace
-        run: |
-          cd packages/extension
-          npx vsce publish --packagePath ../../artifacts/packages/extension/*.vsix -p ${{ secrets.VSCE_PAT }}
+        working-directory: packages/extension
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
+        run: |
+          npx vsce publish --packagePath ../../artifacts/packages/extension/*.vsix -p ${VSCE_PAT}
       
       - name: Publish to Open VSX Registry
-        run: |
-          cd packages/extension
-          npx ovsx publish ../../artifacts/packages/extension/*.vsix -p ${{ secrets.OVSX_PAT }}
+        working-directory: packages/extension
         env:
           OVSX_PAT: ${{ secrets.OVSX_PAT }}
+        run: |
+          npx ovsx publish ../../artifacts/packages/extension/*.vsix -p ${OVSX_PAT}
         continue-on-error: true  # Don't fail if Open VSX publish fails
 
   publish-prerelease:
@@ -180,8 +180,8 @@ jobs:
           path: ./artifacts
       
       - name: Publish pre-release to VS Code Marketplace
-        run: |
-          cd packages/extension
-          npx vsce publish --pre-release --packagePath ../../artifacts/packages/extension/*.vsix -p ${{ secrets.VSCE_PAT }}
+        working-directory: packages/extension
         env:
           VSCE_PAT: ${{ secrets.VSCE_PAT }}
+        run: |
+          npx vsce publish --pre-release --packagePath ../../artifacts/packages/extension/*.vsix -p ${VSCE_PAT}
