--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -417,8 +417,9 @@
     },
     "scripts": {
         "vscode:prepublish": "npm run build",
-        "build": "tsc",
-        "dev": "tsc --watch",
+        "build": "esbuild src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node --sourcemap --minify",
+        "dev": "esbuild src/extension.ts --bundle --outfile=dist/extension.js --external:vscode --format=cjs --platform=node --sourcemap --watch",
+        "compile": "tsc --noEmit",
         "test": "jest",
         "test:coverage": "jest --coverage",
         "test:integration": "npm run build && node ./dist/test/runTest.js",
@@ -437,6 +438,7 @@
         "ts-jest": "^29.1.0",
         "typescript": "^5.3.0",
         "@vscode/vsce": "^3.2.1",
+        "esbuild": "^0.24.0",
         "rimraf": "^6.0.1"
     }
 }
