chore: comment out Open VSX publish step in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -160,22 +160,24 @@ jobs:
           echo "Publishing: $VSIX_FILE"
           npx vsce publish --packagePath "$VSIX_FILE" -p ${VSCE_PAT}
       
-      - name: Publish to Open VSX Registry
-        env:
-          OVSX_PAT: ${{ secrets.OVSX_PAT }}
-        run: |
-          if [ -z "$OVSX_PAT" ]; then
-            echo "⚠️  OVSX_PAT secret not configured - skipping Open VSX publish"
-            exit 0
-          fi
-          VSIX_FILE=$(find ./artifacts -name "*.vsix" -type f | head -n 1)
-          if [ -n "$VSIX_FILE" ]; then
-            echo "Publishing to Open VSX: $VSIX_FILE"
-            npx ovsx publish "$VSIX_FILE" -p ${OVSX_PAT}
-          else
-            echo "Warning: No .vsix file found for Open VSX"
-          fi
-        continue-on-error: true  # Don't fail if Open VSX publish fails
+      # Uncomment to publish to Open VSX Registry (open-source alternative marketplace)
+      # Requires OVSX_PAT secret: https://open-vsx.org/user-settings/tokens
+      # - name: Publish to Open VSX Registry
+      #   env:
+      #     OVSX_PAT: ${{ secrets.OVSX_PAT }}
+      #   run: |
+      #     if [ -z "$OVSX_PAT" ]; then
+      #       echo "⚠️  OVSX_PAT secret not configured - skipping Open VSX publish"
+      #       exit 0
+      #     fi
+      #     VSIX_FILE=$(find ./artifacts -name "*.vsix" -type f | head -n 1)
+      #     if [ -n "$VSIX_FILE" ]; then
+      #       echo "Publishing to Open VSX: $VSIX_FILE"
+      #       npx ovsx publish "$VSIX_FILE" -p ${OVSX_PAT}
+      #     else
+      #       echo "Warning: No .vsix file found for Open VSX"
+      #     fi
+      #   continue-on-error: true  # Don't fail if Open VSX publish fails
 
   publish-prerelease:
     name: Publish Pre-release to Marketplace
