--- a/packages/mcp/package.json
+++ b/packages/mcp/package.json
@@ -6,8 +6,9 @@
     "main": "./dist/server.js",
     "types": "./dist/server.d.ts",
     "scripts": {
-        "build": "tsc",
-        "dev": "tsc --watch",
+        "build": "esbuild src/server.ts --bundle --outfile=dist/server.js --platform=node --format=esm --sourcemap --minify --external:fsevents",
+        "dev": "esbuild src/server.ts --bundle --outfile=dist/server.js --platform=node --format=esm --sourcemap --watch",
+        "compile": "tsc --noEmit",
         "start": "node dist/server.js",
         "test": "jest",
         "test:coverage": "jest --coverage",
@@ -27,6 +28,7 @@
         "jest": "^29.7.0",
         "@types/jest": "^29.5.0",
         "ts-jest": "^29.1.0",
-        "rimraf": "^6.0.1"
+        "rimraf": "^6.0.1",
+        "esbuild": "^0.24.0"
     }
 }
